<resources>
    <string name="app_name">Fendisha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily_meal">Daily Meal</string>
    <string name="menu_fav">Favourite</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="app_description">Taste of Addis</string>
    <string name="welcome_message">Explore Your Dream Foods</string>
    <string name="sign_in">Sign In</string>
    <string name="register_button_message">Register</string>
    <string name="image_description">Background Image</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don`t have an account?</string>
    <string name="have_account">Already Registered?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_my_cart">My Cart</string>
</resources>