<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_svgrepo_com"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/infinity_symbol_svgrepo_com"
            android:title="@string/menu_daily_meal" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/baseline_add_shopping_cart_24"
            android:title="@string/menu_my_cart" />
    </group>
</menu>